--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ p{
     padding: 10px;
 }
 main{
-    max-width:840;
+    max-width:840px;
 }
 aside{
     width:20rem;
@@ -42,4 +42,9 @@ main img{
 }
 p{
     padding:0;
+}
+footer{
+    margin-top:15px;
+    border-top:1px solid #000;
+    text-align: center;
 }
